--- a/02-Challenge/index.html
+++ b/02-Challenge/index.html
@@ -31,8 +31,8 @@
           <input type="text" name="username" id="username" />
 
           <!-- An input element whose label and id are `title` -->
-          <label for="text">Title</label>
-          <input type="text" name="title" id="title" />
+          <label for="title">Title</label>
+          <input type="title" name="title" id="title" />
 
           <!-- A textarea element whose label and id are `content` -->
           <label for="content">Content</label>
@@ -40,7 +40,7 @@
 
           <!-- A p element whose id is `error` -->
 
-          <p id="error"></p>
+          <p id="error">No Blog posts yet...</p>
 
           <!-- A button element whose id is `submit` -->
 
